--- a/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -137,7 +137,7 @@
                                     </div>
                                     <span class="profile-username">
                                         <span class="op-7">Hi,</span>
-                                        <span class="fw-bold">Hizrian</span>
+                                        <span class="fw-bold">Trieu</span>
                                     </span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-user animated fadeIn">
@@ -148,16 +148,16 @@
                                                 <img src="/Content/admin/dashboard/img/profile.jpg" alt="image profile" class="avatar-img rounded" />
                                             </div>
                                             <div class="u-text">
-                                                <h4>Hizrian</h4>
-                                                <p class="text-muted">hello@example.com</p>
-                                                <a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+                                                <h4>Trieu</h4>
+                                                <p class="text-muted">trieunn22@uef.edu.vn</p>
+                                                <a href="/Home" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
                                             </div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="#">My Profile</a>
-                                        <a class="dropdown-item" href="#">Logout</a>
+                                        <a class="dropdown-item" href="/Home">Logout</a>
                                     </li>
                     </div>
                     </ul>
