--- a/eParty/Views/Shared/LayoutUser.cshtml
+++ b/eParty/Views/Shared/LayoutUser.cshtml
@@ -81,6 +81,7 @@
                         <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
                     </div>
                     <button class="btn-search btn btn-primary btn-md-square me-4 rounded-circle d-none d-lg-inline-flex" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
+                    <a href="/Home/Login" class="btn btn-primary py-2 px-4 d-none d-xl-inline-block rounded-pill me-2">Đăng nhập</a>
                     <a href="/Home/Book" class="btn btn-primary py-2 px-4 d-none d-xl-inline-block rounded-pill">Đặt ngay</a>
                 </div>
             </nav>
