--- a/eParty/Views/Shared/LayoutUser.cshtml
+++ b/eParty/Views/Shared/LayoutUser.cshtml
@@ -179,5 +179,6 @@
     </script>
 
     <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
