--- a/eParty/Views/Home/BookPartial.cshtml
+++ b/eParty/Views/Home/BookPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿@model eParty.Models.HomeViewModel
 @using Newtonsoft.Json
 @{
-    ViewBag.Title = "Đặt dịch vụ";
-    Layout = "~/Views/Shared/LayoutUser.cshtml";
+    Layout = null;
 }
 <div class="container-fluid contact py-6 wow bounceInUp" data-wow-delay="0.1s">
     <div class="container">
@@ -554,4 +553,5 @@ renderPagination();
             background-color: #d4d4d4;
         }
 </style>
+
 
