--- a/eParty/Views/Home/Book.cshtml
+++ b/eParty/Views/Home/Book.cshtml
@@ -554,11 +554,11 @@ renderPagination();
     #foodList {
         display: flex;
         flex-wrap: wrap;
-        gap: 20px 15px;
-        justify-content: center;
+        gap: 20px 60px;
+        justify-content: flex-start;
     }
 
         #foodList .card {
-            width: 150px; /* đảm bảo 3 thẻ 1 hàng */
+            width: 170px; 
         }
 </style>
